// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selenium/webpage should run async script in runAsyncScript 1`] = `
"
    var callback = arguments[arguments.length - 1];
    var retVal = (function() { 
      return Promise.resolve(true);
    ; })()
    if (retVal && retVal.then) {
      retVal.then(callback)
    } else {
      callback(retVal)
    }
"
`;

exports[`selenium/webpage should run sync script in runAsyncScript and fix blockless bodies 1`] = `
"
    var callback = arguments[arguments.length - 1];
    var retVal = (function() { return true; })()
    if (retVal && retVal.then) {
      retVal.then(callback)
    } else {
      callback(retVal)
    }
"
`;
